Fix double scrollbar, added Window title

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,8 @@ html, body {
 body {
     margin: 0;
     font-family: "Roboto Mono", "Noto Sans CJK JP", "Noto Sans CJK KR", "Noto Sans CJK SC", "Noto Sans CJK TC", "Noto Sans JP", "Noto Sans KR", "Noto Sans SC", "Noto Sans TC", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W3", monospace;
-    overflow-x: hidden;
     -webkit-font-smoothing: subpixel-antialiased;
+    overflow: hidden;
 }
 
 .container {
@@ -24,15 +24,15 @@ body {
 .container .editor {
     display: block;
     box-sizing: border-box;
+    font: inherit !important;
+    background: none;
     width: 100%;
-    margin: 0 auto;
-    max-width: 960px;
     height: 100%;
+    max-width: 960px;
+    margin: 0 auto;
     padding: 1em 4em;
     cursor: text !important;
-    font: inherit !important;
     border: none;
-    background: none;
     resize: none;
 }
 
@@ -41,23 +41,21 @@ body {
 }
 
 .title {
+    font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+    font-size: 14px;
+    background: #EEE;
+    color: #323232;
+    border-bottom: 1px solid #DDD;
+    position: fixed;
     width: 100%;
     height: 37px;
-    background: #EEE;
-    color: white;
-    padding-left: 80px;
     -webkit-app-region: drag;
     -webkit-user-select: none;
-    position: fixed;
-    border-bottom: 1px solid #DDD;
 }
 
-.title .tabs {
-
-}
-
-.title .tabs ol, .title .tabs li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.title .name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
